<resources>
    <string name="app_name">BAMX Nutrición</string>
    <string name="title_activity_home">home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="restablecer_contrase_a">Restablecer contraseña</string>
    <string name="cerrar_sesion">CERRAR SESION</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="textview">TextView</string>
    <string name="nombre">Nombre</string>
    <string name="perfil_image">TODO</string>
</resources>